// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions new message addAttachments() should dispatch NEW_MESSAGE_ADD_ATTACHMENT_ERROR when adding more than 1 attachement in a facebook comment 1`] = `
Array [
  Object {
    "type": "NEW_MESSAGE_ADD_ATTACHMENT_START",
  },
  Object {
    "payload": Object {
      "allowHTML": true,
      "buttons": Array [],
      "closeButton": false,
      "dismissAfter": 9000,
      "dismissible": true,
      "id": "newMessageAddAttachmentsError",
      "message": "
                    Facebook comments have limitations on attachments:
                    <ul>
                        <li>You cannot send more than one attachment.</li>
                        <li>You can only send images or videos.</li>
                    </ul>
                ",
      "position": "tc",
      "status": "error",
      "style": "alert",
      "title": "We could not add all of your attachments !",
    },
    "type": "ADD_NOTIFICATION",
  },
  Object {
    "type": "NEW_MESSAGE_ADD_ATTACHMENT_ERROR",
  },
]
`;

exports[`actions new message addAttachments() should dispatch NEW_MESSAGE_ADD_ATTACHMENT_ERROR when failing to add attachment 1`] = `
Array [
  Object {
    "type": "NEW_MESSAGE_ADD_ATTACHMENT_START",
  },
  Object {
    "error": Object {
      "response": Object {},
    },
    "reason": "Failed to upload files. Please try again later",
    "type": "NEW_MESSAGE_ADD_ATTACHMENT_ERROR",
  },
]
`;

exports[`actions new message addAttachments() should dispatch NEW_MESSAGE_ADD_ATTACHMENT_ERROR when source is facebook comment and file has wrong type 1`] = `
Array [
  Object {
    "type": "NEW_MESSAGE_ADD_ATTACHMENT_START",
  },
  Object {
    "payload": Object {
      "allowHTML": true,
      "buttons": Array [],
      "closeButton": false,
      "dismissAfter": 9000,
      "dismissible": true,
      "id": "newMessageAddAttachmentsError",
      "message": "
                    Facebook comments have limitations on attachments:
                    <ul>
                        <li>You cannot send more than one attachment.</li>
                        <li>You can only send images or videos.</li>
                    </ul>
                ",
      "position": "tc",
      "status": "error",
      "style": "alert",
      "title": "We could not add all of your attachments !",
    },
    "type": "ADD_NOTIFICATION",
  },
  Object {
    "type": "NEW_MESSAGE_ADD_ATTACHMENT_ERROR",
  },
]
`;

exports[`actions new message addAttachments() should dispatch NEW_MESSAGE_ADD_ATTACHMENT_ERROR with a reason  when error code is 413 1`] = `
Array [
  Object {
    "type": "NEW_MESSAGE_ADD_ATTACHMENT_START",
  },
  Object {
    "error": Object {
      "response": Object {
        "status": 413,
      },
    },
    "reason": "Failed to upload files. One or more files are larger than the size limit of 10MB.",
    "type": "NEW_MESSAGE_ADD_ATTACHMENT_ERROR",
  },
]
`;

exports[`actions new message addAttachments() should dispatch NEW_MESSAGE_ADD_ATTACHMENT_SUCCESS when successfully adding attachments 1`] = `
Array [
  Object {
    "type": "NEW_MESSAGE_ADD_ATTACHMENT_START",
  },
  Object {
    "resp": Array [],
    "type": "NEW_MESSAGE_ADD_ATTACHMENT_SUCCESS",
  },
]
`;

exports[`actions new message addAttachments() should not dispatch NEW_MESSAGE_ADD_ATTACHMENT_SUCCESS when successfully adding attachments in another ticket 1`] = `
Array [
  Object {
    "type": "NEW_MESSAGE_ADD_ATTACHMENT_START",
  },
]
`;

exports[`actions new message addSignature() should dispatch NEW_MESSAGE_ADD_SIGNATURE action 1`] = `
Array [
  Object {
    "contentState": Immutable.Record {
      "entityMap": Object {
        "__add": [Function],
        "__create": [Function],
        "__get": [Function],
        "__getLastCreatedEntityKey": [Function],
        "__mergeData": [Function],
        "__replaceData": [Function],
        "add": [Function],
        "create": [Function],
        "get": [Function],
        "getLastCreatedEntityKey": [Function],
        "mergeData": [Function],
        "replaceData": [Function],
      },
      "blockMap": Immutable.OrderedMap {
        "someRandomKey": Immutable.Record {
          "key": "someRandomKey",
          "type": "unstyled",
          "text": "foo",
          "characterList": Immutable.List [
            Immutable.Record {
              "style": Immutable.OrderedSet [],
              "entity": null,
            },
            Immutable.Record {
              "style": Immutable.OrderedSet [],
              "entity": null,
            },
            Immutable.Record {
              "style": Immutable.OrderedSet [],
              "entity": null,
            },
          ],
          "depth": 0,
          "data": Immutable.Map {},
        },
      },
      "selectionBefore": Immutable.Record {
        "anchorKey": "someRandomKey",
        "anchorOffset": 0,
        "focusKey": "someRandomKey",
        "focusOffset": 0,
        "isBackward": false,
        "hasFocus": false,
      },
      "selectionAfter": Immutable.Record {
        "anchorKey": "someRandomKey",
        "anchorOffset": 0,
        "focusKey": "someRandomKey",
        "focusOffset": 0,
        "isBackward": false,
        "hasFocus": false,
      },
    },
    "signature": Immutable.Map {
      "text": "Cheers, Steve",
      "html": "Cheers, <strong>Steve</strong>",
    },
    "type": "NEW_MESSAGE_ADD_SIGNATURE",
  },
]
`;

exports[`actions new message newMessageResetFromMessage should send the message data to reset the state 1`] = `
Array [
  Object {
    "payload": Object {
      "body_text": "foo",
    },
    "type": "NEW_MESSAGE_RESET_FROM_MESSAGE",
  },
]
`;

exports[`actions new message prepare() email-forward should not set an attachment in the newMessage if it is already there 1`] = `
Array [
  Object {
    "subject": "Fwd: ",
    "type": "NEW_MESSAGE_SET_SUBJECT",
  },
  Object {
    "messages": Immutable.List [
      Immutable.Map {
        "source": Immutable.Map {
          "to": Immutable.List [
            Immutable.Map {
              "name": "Marc",
              "address": "marc.wall@gmail.com",
            },
            Immutable.Map {
              "name": "Acme Support",
              "address": "support@acme.gorgias.io",
            },
          ],
          "from": Immutable.Map {
            "name": "Steve Frizeli",
            "address": "marie.curie@gmail.com",
          },
          "type": "email",
        },
        "id": 151,
        "from_agent": false,
        "attachments": Immutable.List [
          Immutable.Map {
            "url": "foo",
          },
          Immutable.Map {
            "url": "bar",
          },
        ],
      },
      Immutable.Map {
        "source": Immutable.Map {
          "cc": Immutable.List [],
          "to": Immutable.List [
            Immutable.Map {
              "name": "Steve Frizeli",
              "address": "steve.frizeli@gmail.com",
            },
          ],
          "from": Immutable.Map {
            "name": "Acme Support",
            "address": "support@acme.gorgias.io",
          },
          "type": "email",
        },
        "id": 152,
        "from_agent": true,
      },
    ],
    "sourceType": "email",
    "type": "NEW_MESSAGE_SET_SOURCE_TYPE",
  },
  Object {
    "extra": Object {
      "forward": true,
    },
    "type": "NEW_MESSAGE_SET_SOURCE_EXTRA",
  },
  Object {
    "sender": Immutable.Map {
      "name": "Acme Support",
      "address": "support@acme.gorgias.io",
    },
    "type": "NEW_MESSAGE_SET_SENDER",
  },
  Object {
    "receivers": Object {},
    "replaceAll": true,
    "type": "NEW_MESSAGE_SET_RECEIVERS",
  },
  Object {
    "resp": Array [
      Object {
        "url": "bar",
      },
    ],
    "type": "NEW_MESSAGE_ADD_ATTACHMENT_SUCCESS",
  },
]
`;

exports[`actions new message prepare() email-forward should prepare an email forward 1`] = `
Array [
  Object {
    "subject": "Fwd: ",
    "type": "NEW_MESSAGE_SET_SUBJECT",
  },
  Object {
    "messages": Immutable.List [
      Immutable.Map {
        "source": Immutable.Map {
          "to": Immutable.List [
            Immutable.Map {
              "name": "Marc",
              "address": "marc.wall@gmail.com",
            },
            Immutable.Map {
              "name": "Acme Support",
              "address": "support@acme.gorgias.io",
            },
          ],
          "from": Immutable.Map {
            "name": "Steve Frizeli",
            "address": "marie.curie@gmail.com",
          },
          "type": "email",
        },
        "id": 151,
        "from_agent": false,
      },
      Immutable.Map {
        "source": Immutable.Map {
          "cc": Immutable.List [],
          "to": Immutable.List [
            Immutable.Map {
              "name": "Steve Frizeli",
              "address": "steve.frizeli@gmail.com",
            },
          ],
          "from": Immutable.Map {
            "name": "Acme Support",
            "address": "support@acme.gorgias.io",
          },
          "type": "email",
        },
        "id": 152,
        "from_agent": true,
      },
    ],
    "sourceType": "email",
    "type": "NEW_MESSAGE_SET_SOURCE_TYPE",
  },
  Object {
    "extra": Object {
      "forward": true,
    },
    "type": "NEW_MESSAGE_SET_SOURCE_EXTRA",
  },
  Object {
    "sender": Immutable.Map {
      "name": "Acme Support",
      "address": "support@acme.gorgias.io",
    },
    "type": "NEW_MESSAGE_SET_SENDER",
  },
  Object {
    "receivers": Object {},
    "replaceAll": true,
    "type": "NEW_MESSAGE_SET_RECEIVERS",
  },
  Object {
    "resp": Array [],
    "type": "NEW_MESSAGE_ADD_ATTACHMENT_SUCCESS",
  },
]
`;

exports[`actions new message prepare() email-forward should set all attachments of the ticket as attachment of the newMessage 1`] = `
Array [
  Object {
    "subject": "Fwd: ",
    "type": "NEW_MESSAGE_SET_SUBJECT",
  },
  Object {
    "messages": Immutable.List [
      Immutable.Map {
        "source": Immutable.Map {
          "to": Immutable.List [
            Immutable.Map {
              "name": "Marc",
              "address": "marc.wall@gmail.com",
            },
            Immutable.Map {
              "name": "Acme Support",
              "address": "support@acme.gorgias.io",
            },
          ],
          "from": Immutable.Map {
            "name": "Steve Frizeli",
            "address": "marie.curie@gmail.com",
          },
          "type": "email",
        },
        "id": 151,
        "from_agent": false,
        "attachments": Immutable.List [
          Immutable.Map {
            "url": "foo",
          },
          Immutable.Map {
            "url": "bar",
          },
        ],
      },
      Immutable.Map {
        "source": Immutable.Map {
          "cc": Immutable.List [],
          "to": Immutable.List [
            Immutable.Map {
              "name": "Steve Frizeli",
              "address": "steve.frizeli@gmail.com",
            },
          ],
          "from": Immutable.Map {
            "name": "Acme Support",
            "address": "support@acme.gorgias.io",
          },
          "type": "email",
        },
        "id": 152,
        "from_agent": true,
        "attachments": Immutable.List [
          Immutable.Map {
            "url": "baz",
          },
          Immutable.Map {
            "url": "far",
          },
        ],
      },
    ],
    "sourceType": "email",
    "type": "NEW_MESSAGE_SET_SOURCE_TYPE",
  },
  Object {
    "extra": Object {
      "forward": true,
    },
    "type": "NEW_MESSAGE_SET_SOURCE_EXTRA",
  },
  Object {
    "sender": Immutable.Map {
      "name": "Acme Support",
      "address": "support@acme.gorgias.io",
    },
    "type": "NEW_MESSAGE_SET_SENDER",
  },
  Object {
    "receivers": Object {},
    "replaceAll": true,
    "type": "NEW_MESSAGE_SET_RECEIVERS",
  },
  Object {
    "resp": Array [
      Object {
        "url": "foo",
      },
      Object {
        "url": "bar",
      },
      Object {
        "url": "baz",
      },
      Object {
        "url": "far",
      },
    ],
    "type": "NEW_MESSAGE_ADD_ATTACHMENT_SUCCESS",
  },
]
`;

exports[`actions new message prepare() instagram comment should add prefix 1`] = `
Array [
  Object {
    "subject": "",
    "type": "NEW_MESSAGE_SET_SUBJECT",
  },
  Object {
    "messages": Immutable.List [
      Immutable.Map {
        "source": Immutable.Map {
          "type": "instagram-media",
          "from": Immutable.Map {
            "address": "1232353100194770",
            "name": "myinstagrampage",
          },
          "to": Immutable.List [
            Immutable.Map {
              "address": "a4sd684a6sd4a5sd",
              "name": "instagramuser",
            },
          ],
          "extra": Immutable.Map {
            "media_id": "519388858269125_626477354226941",
            "permalink": "https://instagram.com/foobar",
          },
        },
        "id": 153,
        "from_agent": true,
      },
      Immutable.Map {
        "source": Immutable.Map {
          "type": "instagram-comment",
          "from": Immutable.Map {
            "address": "a4sd684a6sd4a5sd",
            "name": "instagramuser",
          },
          "to": Immutable.List [
            Immutable.Map {
              "address": "1232353100194770",
              "name": "myinstagrampage",
            },
          ],
          "extra": Immutable.Map {
            "media_id": "519388858269125_626477354226941",
          },
        },
        "id": 189,
        "from_agent": false,
      },
    ],
    "sourceType": "instagram-comment",
    "type": "NEW_MESSAGE_SET_SOURCE_TYPE",
  },
  Object {
    "extra": Object {},
    "type": "NEW_MESSAGE_SET_SOURCE_EXTRA",
  },
  Object {
    "receivers": Object {
      "to": Array [
        Object {
          "address": "a4sd684a6sd4a5sd",
          "name": "instagramuser",
        },
      ],
    },
    "replaceAll": true,
    "type": "NEW_MESSAGE_SET_RECEIVERS",
  },
  Object {
    "sender": Immutable.Map {
      "name": "myinstagrampage",
      "address": "1232353100194770",
    },
    "type": "NEW_MESSAGE_SET_SENDER",
  },
  Object {
    "appliedMacro": undefined,
    "args": Immutable.Map {
      "contentState": Immutable.Record {
        "entityMap": Object {
          "__add": [Function],
          "__create": [Function],
          "__get": [Function],
          "__getLastCreatedEntityKey": [Function],
          "__mergeData": [Function],
          "__replaceData": [Function],
          "add": [Function],
          "create": [Function],
          "get": [Function],
          "getLastCreatedEntityKey": [Function],
          "mergeData": [Function],
          "replaceData": [Function],
        },
        "blockMap": Immutable.OrderedMap {
          "someRandomKey": Immutable.Record {
            "key": "someRandomKey",
            "type": "unstyled",
            "text": "@instauser ",
            "characterList": Immutable.List [
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
            ],
            "depth": 0,
            "data": Immutable.Map {},
          },
        },
        "selectionBefore": Immutable.Record {
          "anchorKey": "someRandomKey",
          "anchorOffset": 0,
          "focusKey": "someRandomKey",
          "focusOffset": 0,
          "isBackward": false,
          "hasFocus": false,
        },
        "selectionAfter": Immutable.Record {
          "anchorKey": "someRandomKey",
          "anchorOffset": 0,
          "focusKey": "someRandomKey",
          "focusOffset": 0,
          "isBackward": false,
          "hasFocus": false,
        },
      },
      "selectionState": Immutable.Record {
        "anchorKey": "someRandomKey",
        "anchorOffset": 11,
        "focusKey": "someRandomKey",
        "focusOffset": 11,
        "isBackward": false,
        "hasFocus": false,
      },
      "dirty": true,
      "forceFocus": true,
      "forceUpdate": true,
    },
    "currentUser": undefined,
    "forceFocus": true,
    "forceUpdate": true,
    "fromMacro": false,
    "signature": Immutable.Map {},
    "ticket": Immutable.Map {
      "messages": Immutable.List [
        Immutable.Map {
          "source": Immutable.Map {
            "type": "instagram-media",
            "from": Immutable.Map {
              "address": "1232353100194770",
              "name": "myinstagrampage",
            },
            "to": Immutable.List [
              Immutable.Map {
                "address": "a4sd684a6sd4a5sd",
                "name": "instagramuser",
              },
            ],
            "extra": Immutable.Map {
              "media_id": "519388858269125_626477354226941",
              "permalink": "https://instagram.com/foobar",
            },
          },
          "id": 153,
          "from_agent": true,
        },
        Immutable.Map {
          "source": Immutable.Map {
            "type": "instagram-comment",
            "from": Immutable.Map {
              "address": "a4sd684a6sd4a5sd",
              "name": "instagramuser",
            },
            "to": Immutable.List [
              Immutable.Map {
                "address": "1232353100194770",
                "name": "myinstagrampage",
              },
            ],
            "extra": Immutable.Map {
              "media_id": "519388858269125_626477354226941",
            },
          },
          "id": 189,
          "from_agent": false,
        },
      ],
    },
    "ticketId": undefined,
    "type": "setResponseText",
  },
]
`;

exports[`actions new message prepare() instagram comment should not add prefix if there is no receiver name 1`] = `
Array [
  Object {
    "subject": "",
    "type": "NEW_MESSAGE_SET_SUBJECT",
  },
  Object {
    "messages": Immutable.List [
      Immutable.Map {
        "source": Immutable.Map {
          "type": "instagram-media",
          "from": Immutable.Map {
            "address": "1232353100194770",
            "name": "myinstagrampage",
          },
          "to": Immutable.List [
            Immutable.Map {
              "address": "a4sd684a6sd4a5sd",
              "name": "instagramuser",
            },
          ],
          "extra": Immutable.Map {
            "media_id": "519388858269125_626477354226941",
            "permalink": "https://instagram.com/foobar",
          },
        },
        "id": 153,
        "from_agent": true,
      },
      Immutable.Map {
        "source": Immutable.Map {
          "type": "instagram-comment",
          "from": Immutable.Map {
            "address": "a4sd684a6sd4a5sd",
            "name": "instagramuser",
          },
          "to": Immutable.List [
            Immutable.Map {
              "address": "1232353100194770",
              "name": "myinstagrampage",
            },
          ],
          "extra": Immutable.Map {
            "media_id": "519388858269125_626477354226941",
          },
        },
        "id": 189,
        "from_agent": false,
      },
    ],
    "sourceType": "instagram-comment",
    "type": "NEW_MESSAGE_SET_SOURCE_TYPE",
  },
  Object {
    "extra": Object {},
    "type": "NEW_MESSAGE_SET_SOURCE_EXTRA",
  },
  Object {
    "receivers": Object {
      "to": Array [
        Object {
          "address": "a4sd684a6sd4a5sd",
          "name": "instagramuser",
        },
      ],
    },
    "replaceAll": true,
    "type": "NEW_MESSAGE_SET_RECEIVERS",
  },
  Object {
    "sender": Immutable.Map {
      "name": "myinstagrampage",
      "address": "1232353100194770",
    },
    "type": "NEW_MESSAGE_SET_SENDER",
  },
]
`;

exports[`actions new message prepare() instagram comment should not add prefix if there is text already 1`] = `
Array [
  Object {
    "subject": "",
    "type": "NEW_MESSAGE_SET_SUBJECT",
  },
  Object {
    "messages": Immutable.List [
      Immutable.Map {
        "source": Immutable.Map {
          "type": "instagram-media",
          "from": Immutable.Map {
            "address": "1232353100194770",
            "name": "myinstagrampage",
          },
          "to": Immutable.List [
            Immutable.Map {
              "address": "a4sd684a6sd4a5sd",
              "name": "instagramuser",
            },
          ],
          "extra": Immutable.Map {
            "media_id": "519388858269125_626477354226941",
            "permalink": "https://instagram.com/foobar",
          },
        },
        "id": 153,
        "from_agent": true,
      },
      Immutable.Map {
        "source": Immutable.Map {
          "type": "instagram-comment",
          "from": Immutable.Map {
            "address": "a4sd684a6sd4a5sd",
            "name": "instagramuser",
          },
          "to": Immutable.List [
            Immutable.Map {
              "address": "1232353100194770",
              "name": "myinstagrampage",
            },
          ],
          "extra": Immutable.Map {
            "media_id": "519388858269125_626477354226941",
          },
        },
        "id": 189,
        "from_agent": false,
      },
    ],
    "sourceType": "instagram-comment",
    "type": "NEW_MESSAGE_SET_SOURCE_TYPE",
  },
  Object {
    "extra": Object {},
    "type": "NEW_MESSAGE_SET_SOURCE_EXTRA",
  },
  Object {
    "receivers": Object {
      "to": Array [
        Object {
          "address": "a4sd684a6sd4a5sd",
          "name": "instagramuser",
        },
      ],
    },
    "replaceAll": true,
    "type": "NEW_MESSAGE_SET_RECEIVERS",
  },
  Object {
    "sender": Immutable.Map {
      "name": "myinstagrampage",
      "address": "1232353100194770",
    },
    "type": "NEW_MESSAGE_SET_SENDER",
  },
]
`;

exports[`actions new message prepare() other types 1`] = `
Array [
  Object {
    "subject": "",
    "type": "NEW_MESSAGE_SET_SUBJECT",
  },
  Object {
    "messages": Immutable.List [
      Immutable.Map {
        "source": Immutable.Map {
          "to": Immutable.List [
            Immutable.Map {
              "name": "Marc",
              "address": "marc.wall@gmail.com",
            },
            Immutable.Map {
              "name": "Acme Support",
              "address": "support@acme.gorgias.io",
            },
          ],
          "from": Immutable.Map {
            "name": "Steve Frizeli",
            "address": "marie.curie@gmail.com",
          },
          "type": "email",
        },
        "id": 151,
        "from_agent": false,
      },
      Immutable.Map {
        "source": Immutable.Map {
          "cc": Immutable.List [],
          "to": Immutable.List [
            Immutable.Map {
              "name": "Steve Frizeli",
              "address": "steve.frizeli@gmail.com",
            },
          ],
          "from": Immutable.Map {
            "name": "Acme Support",
            "address": "support@acme.gorgias.io",
          },
          "type": "email",
        },
        "id": 152,
        "from_agent": true,
      },
    ],
    "sourceType": "email",
    "type": "NEW_MESSAGE_SET_SOURCE_TYPE",
  },
  Object {
    "extra": Object {},
    "type": "NEW_MESSAGE_SET_SOURCE_EXTRA",
  },
  Object {
    "receivers": Object {
      "to": Array [
        Object {
          "address": "steve.frizeli@gmail.com",
          "name": "Steve Frizeli",
        },
      ],
    },
    "replaceAll": true,
    "type": "NEW_MESSAGE_SET_RECEIVERS",
  },
  Object {
    "sender": Immutable.Map {
      "name": "Acme Support",
      "address": "support@acme.gorgias.io",
    },
    "type": "NEW_MESSAGE_SET_SENDER",
  },
]
`;

exports[`actions new message prepare() other types 2`] = `
Array [
  Object {
    "subject": "",
    "type": "NEW_MESSAGE_SET_SUBJECT",
  },
  Object {
    "messages": Immutable.List [
      Immutable.Map {
        "source": Immutable.Map {
          "to": Immutable.List [
            Immutable.Map {
              "name": "Marc",
              "address": "marc.wall@gmail.com",
            },
            Immutable.Map {
              "name": "Acme Support",
              "address": "support@acme.gorgias.io",
            },
          ],
          "from": Immutable.Map {
            "name": "Steve Frizeli",
            "address": "marie.curie@gmail.com",
          },
          "type": "email",
        },
        "id": 151,
        "from_agent": false,
      },
      Immutable.Map {
        "source": Immutable.Map {
          "cc": Immutable.List [],
          "to": Immutable.List [
            Immutable.Map {
              "name": "Steve Frizeli",
              "address": "steve.frizeli@gmail.com",
            },
          ],
          "from": Immutable.Map {
            "name": "Acme Support",
            "address": "support@acme.gorgias.io",
          },
          "type": "email",
        },
        "id": 152,
        "from_agent": true,
      },
    ],
    "sourceType": "chat",
    "type": "NEW_MESSAGE_SET_SOURCE_TYPE",
  },
  Object {
    "extra": Object {},
    "type": "NEW_MESSAGE_SET_SOURCE_EXTRA",
  },
  Object {
    "receivers": Object {
      "to": Array [
        Object {
          "address": "steve.frizeli@gmail.com",
          "name": "Steve Frizeli",
        },
      ],
    },
    "replaceAll": true,
    "type": "NEW_MESSAGE_SET_RECEIVERS",
  },
  Object {
    "sender": Immutable.Map {
      "name": "Acme Support",
      "address": "support@acme.gorgias.io",
    },
    "type": "NEW_MESSAGE_SET_SENDER",
  },
]
`;

exports[`actions new message prepare() other types 3`] = `
Array [
  Object {
    "subject": "",
    "type": "NEW_MESSAGE_SET_SUBJECT",
  },
  Object {
    "messages": Immutable.List [
      Immutable.Map {
        "source": Immutable.Map {
          "to": Immutable.List [
            Immutable.Map {
              "name": "Marc",
              "address": "marc.wall@gmail.com",
            },
            Immutable.Map {
              "name": "Acme Support",
              "address": "support@acme.gorgias.io",
            },
          ],
          "from": Immutable.Map {
            "name": "Steve Frizeli",
            "address": "marie.curie@gmail.com",
          },
          "type": "email",
        },
        "id": 151,
        "from_agent": false,
      },
      Immutable.Map {
        "source": Immutable.Map {
          "cc": Immutable.List [],
          "to": Immutable.List [
            Immutable.Map {
              "name": "Steve Frizeli",
              "address": "steve.frizeli@gmail.com",
            },
          ],
          "from": Immutable.Map {
            "name": "Acme Support",
            "address": "support@acme.gorgias.io",
          },
          "type": "email",
        },
        "id": 152,
        "from_agent": true,
      },
    ],
    "sourceType": "facebook-comment",
    "type": "NEW_MESSAGE_SET_SOURCE_TYPE",
  },
  Object {
    "extra": Object {},
    "type": "NEW_MESSAGE_SET_SOURCE_EXTRA",
  },
  Object {
    "receivers": Object {
      "to": Array [
        Object {
          "address": "steve.frizeli@gmail.com",
          "name": "Steve Frizeli",
        },
      ],
    },
    "replaceAll": true,
    "type": "NEW_MESSAGE_SET_RECEIVERS",
  },
  Object {
    "sender": Immutable.Map {
      "name": "Acme Support",
      "address": "support@acme.gorgias.io",
    },
    "type": "NEW_MESSAGE_SET_SENDER",
  },
]
`;

exports[`actions new message prepare() other types 4`] = `
Array [
  Object {
    "subject": "",
    "type": "NEW_MESSAGE_SET_SUBJECT",
  },
  Object {
    "messages": Immutable.List [
      Immutable.Map {
        "source": Immutable.Map {
          "to": Immutable.List [
            Immutable.Map {
              "name": "Marc",
              "address": "marc.wall@gmail.com",
            },
            Immutable.Map {
              "name": "Acme Support",
              "address": "support@acme.gorgias.io",
            },
          ],
          "from": Immutable.Map {
            "name": "Steve Frizeli",
            "address": "marie.curie@gmail.com",
          },
          "type": "email",
        },
        "id": 151,
        "from_agent": false,
      },
      Immutable.Map {
        "source": Immutable.Map {
          "cc": Immutable.List [],
          "to": Immutable.List [
            Immutable.Map {
              "name": "Steve Frizeli",
              "address": "steve.frizeli@gmail.com",
            },
          ],
          "from": Immutable.Map {
            "name": "Acme Support",
            "address": "support@acme.gorgias.io",
          },
          "type": "email",
        },
        "id": 152,
        "from_agent": true,
      },
    ],
    "sourceType": "facebook-message",
    "type": "NEW_MESSAGE_SET_SOURCE_TYPE",
  },
  Object {
    "extra": Object {},
    "type": "NEW_MESSAGE_SET_SOURCE_EXTRA",
  },
  Object {
    "receivers": Object {
      "to": Array [
        Object {
          "address": "steve.frizeli@gmail.com",
          "name": "Steve Frizeli",
        },
      ],
    },
    "replaceAll": true,
    "type": "NEW_MESSAGE_SET_RECEIVERS",
  },
  Object {
    "sender": Immutable.Map {
      "name": "Acme Support",
      "address": "support@acme.gorgias.io",
    },
    "type": "NEW_MESSAGE_SET_SENDER",
  },
]
`;

exports[`actions new message prepareTicketMessage should prepare next new message after we submitted an instagram comment 1`] = `
Object {
  "attachments": Array [],
  "body_html": "",
  "body_text": "",
  "channel": "email",
  "from_agent": true,
  "macros": Array [],
  "mention_ids": Array [],
  "public": true,
  "sender": Immutable.Map {
    "id": 1,
    "name": "foo",
  },
  "source": Object {
    "extra": Object {
      "media_id": "519388858269125_626477354226941",
    },
    "to": Array [
      Object {
        "name": "messagereceiver",
      },
    ],
    "type": "instagram-comment",
  },
  "subject": "",
  "via": "helpdesk",
}
`;

exports[`actions new message sendTicketMessage should submit new message 1`] = `
Array [
  Object {
    "message": Object {
      "attachments": Array [],
      "body_html": "<div><br></div>",
      "body_text": "",
      "channel": "email",
      "from_agent": true,
      "macros": Array [],
      "mention_ids": Array [],
      "public": true,
      "sender": Immutable.Map {
        "id": 1,
        "name": "foo",
      },
      "source": Object {
        "bcc": Array [],
        "cc": Array [],
        "from": Object {},
        "to": Array [],
        "type": "email",
      },
      "subject": "",
      "via": "helpdesk",
    },
    "messageId": "nowTimestamp",
    "messages": Immutable.List [],
    "resetMessage": true,
    "retry": false,
    "status": undefined,
    "ticketId": 12,
    "type": "NEW_MESSAGE_SUBMIT_TICKET_MESSAGE_START",
  },
  Object {
    "macro": undefined,
    "type": "APPLY_MACRO",
  },
  Object {
    "appliedMacro": null,
    "args": Immutable.Map {
      "forceFocus": true,
      "forceUpdate": true,
    },
    "currentUser": Immutable.Map {
      "id": 1,
      "name": "foo",
    },
    "forceFocus": true,
    "forceUpdate": true,
    "fromMacro": false,
    "signature": Immutable.Map {},
    "ticket": Immutable.Map {
      "trashed_datetime": null,
      "channel": "email",
      "priority": "normal",
      "reply_options": Immutable.Map {
        "email": Immutable.Map {
          "answerable": true,
        },
        "internal-note": Immutable.Map {
          "answerable": true,
        },
      },
      "spam": false,
      "subject": "",
      "messages": Immutable.List [],
      "assignee_team": null,
      "via": "helpdesk",
      "state": Immutable.Map {
        "dirty": false,
        "latestEventDatetime": null,
        "appliedMacro": null,
      },
      "status": "open",
      "tags": Immutable.List [],
      "events": Immutable.List [],
      "assignee_user": null,
      "id": 12,
      "_internal": Immutable.Map {
        "displayHistory": false,
        "shouldDisplayAuditLogEvents": false,
        "shouldDisplayHistoryOnNextPage": false,
        "loading": Immutable.Map {
          "fetchTicket": false,
          "deleteMessage": false,
          "setSpam": false,
          "setTrash": false,
        },
        "pendingMessages": Immutable.List [],
      },
      "customer": null,
    },
    "ticketId": 12,
    "type": "setResponseText",
  },
  Object {
    "receivers": Object {
      "to": Array [],
    },
    "replaceAll": true,
    "type": "NEW_MESSAGE_SET_RECEIVERS",
  },
  Object {
    "sender": Immutable.Map {
      "name": "Acme Support",
      "address": "support@acme.gorgias.io",
    },
    "type": "NEW_MESSAGE_SET_SENDER",
  },
]
`;

exports[`actions new message setResponseText() should always pass the args to the reducer 1`] = `
Array [
  Object {
    "appliedMacro": undefined,
    "args": Immutable.Map {
      "contentState": Immutable.Record {
        "entityMap": Object {
          "__add": [Function],
          "__create": [Function],
          "__get": [Function],
          "__getLastCreatedEntityKey": [Function],
          "__mergeData": [Function],
          "__replaceData": [Function],
          "add": [Function],
          "create": [Function],
          "get": [Function],
          "getLastCreatedEntityKey": [Function],
          "mergeData": [Function],
          "replaceData": [Function],
        },
        "blockMap": Immutable.OrderedMap {
          "someRandomKey": Immutable.Record {
            "key": "someRandomKey",
            "type": "unstyled",
            "text": "foo",
            "characterList": Immutable.List [
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
            ],
            "depth": 0,
            "data": Immutable.Map {},
          },
        },
        "selectionBefore": Immutable.Record {
          "anchorKey": "someRandomKey",
          "anchorOffset": 0,
          "focusKey": "someRandomKey",
          "focusOffset": 0,
          "isBackward": false,
          "hasFocus": false,
        },
        "selectionAfter": Immutable.Record {
          "anchorKey": "someRandomKey",
          "anchorOffset": 0,
          "focusKey": "someRandomKey",
          "focusOffset": 0,
          "isBackward": false,
          "hasFocus": false,
        },
      },
    },
    "currentUser": undefined,
    "forceFocus": false,
    "forceUpdate": false,
    "fromMacro": false,
    "signature": Immutable.Map {},
    "ticket": Immutable.Map {
      "messages": Immutable.List [
        Immutable.Map {
          "source": Immutable.Map {
            "to": Immutable.List [
              Immutable.Map {
                "name": "Marc",
                "address": "marc.wall@gmail.com",
              },
              Immutable.Map {
                "name": "Acme Support",
                "address": "support@acme.gorgias.io",
              },
            ],
            "from": Immutable.Map {
              "name": "Steve Frizeli",
              "address": "marie.curie@gmail.com",
            },
            "type": "email",
          },
          "id": 151,
          "from_agent": false,
        },
        Immutable.Map {
          "source": Immutable.Map {
            "cc": Immutable.List [],
            "to": Immutable.List [
              Immutable.Map {
                "name": "Steve Frizeli",
                "address": "steve.frizeli@gmail.com",
              },
            ],
            "from": Immutable.Map {
              "name": "Acme Support",
              "address": "support@acme.gorgias.io",
            },
            "type": "email",
          },
          "id": 152,
          "from_agent": true,
        },
      ],
    },
    "ticketId": undefined,
    "type": "setResponseText",
  },
]
`;

exports[`actions new message setResponseText() should not send a typing event when the reply area only contains a signature 1`] = `
Array [
  Object {
    "appliedMacro": undefined,
    "args": Immutable.Map {
      "contentState": Immutable.Record {
        "entityMap": Object {
          "__add": [Function],
          "__create": [Function],
          "__get": [Function],
          "__getLastCreatedEntityKey": [Function],
          "__mergeData": [Function],
          "__replaceData": [Function],
          "add": [Function],
          "create": [Function],
          "get": [Function],
          "getLastCreatedEntityKey": [Function],
          "mergeData": [Function],
          "replaceData": [Function],
        },
        "blockMap": Immutable.OrderedMap {
          "someRandomKey": Immutable.Record {
            "key": "someRandomKey",
            "type": "unstyled",
            "text": "signature",
            "characterList": Immutable.List [
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
            ],
            "depth": 0,
            "data": Immutable.Map {},
          },
        },
        "selectionBefore": Immutable.Record {
          "anchorKey": "someRandomKey",
          "anchorOffset": 0,
          "focusKey": "someRandomKey",
          "focusOffset": 0,
          "isBackward": false,
          "hasFocus": false,
        },
        "selectionAfter": Immutable.Record {
          "anchorKey": "someRandomKey",
          "anchorOffset": 0,
          "focusKey": "someRandomKey",
          "focusOffset": 0,
          "isBackward": false,
          "hasFocus": false,
        },
      },
    },
    "currentUser": undefined,
    "forceFocus": false,
    "forceUpdate": false,
    "fromMacro": false,
    "signature": Immutable.Map {},
    "ticket": Immutable.Map {
      "id": 1,
    },
    "ticketId": 1,
    "type": "setResponseText",
  },
]
`;

exports[`actions new message setResponseText() should not send a typing event when the user is typing in an internal note 1`] = `
Array [
  Object {
    "appliedMacro": undefined,
    "args": Immutable.Map {
      "contentState": Immutable.Record {
        "entityMap": Object {
          "__add": [Function],
          "__create": [Function],
          "__get": [Function],
          "__getLastCreatedEntityKey": [Function],
          "__mergeData": [Function],
          "__replaceData": [Function],
          "add": [Function],
          "create": [Function],
          "get": [Function],
          "getLastCreatedEntityKey": [Function],
          "mergeData": [Function],
          "replaceData": [Function],
        },
        "blockMap": Immutable.OrderedMap {
          "someRandomKey": Immutable.Record {
            "key": "someRandomKey",
            "type": "unstyled",
            "text": "foo",
            "characterList": Immutable.List [
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
            ],
            "depth": 0,
            "data": Immutable.Map {},
          },
        },
        "selectionBefore": Immutable.Record {
          "anchorKey": "someRandomKey",
          "anchorOffset": 0,
          "focusKey": "someRandomKey",
          "focusOffset": 0,
          "isBackward": false,
          "hasFocus": false,
        },
        "selectionAfter": Immutable.Record {
          "anchorKey": "someRandomKey",
          "anchorOffset": 0,
          "focusKey": "someRandomKey",
          "focusOffset": 0,
          "isBackward": false,
          "hasFocus": false,
        },
      },
    },
    "currentUser": undefined,
    "forceFocus": false,
    "forceUpdate": false,
    "fromMacro": false,
    "signature": Immutable.Map {},
    "ticket": Immutable.Map {
      "id": 1,
    },
    "ticketId": 1,
    "type": "setResponseText",
  },
]
`;

exports[`actions new message setResponseText() should not send an end typing event when the user is not typing and not in ticket 1`] = `
Array [
  Object {
    "appliedMacro": undefined,
    "args": Immutable.Map {
      "contentState": Immutable.Record {
        "entityMap": Object {
          "__add": [Function],
          "__create": [Function],
          "__get": [Function],
          "__getLastCreatedEntityKey": [Function],
          "__mergeData": [Function],
          "__replaceData": [Function],
          "add": [Function],
          "create": [Function],
          "get": [Function],
          "getLastCreatedEntityKey": [Function],
          "mergeData": [Function],
          "replaceData": [Function],
        },
        "blockMap": Immutable.OrderedMap {
          "someRandomKey": Immutable.Record {
            "key": "someRandomKey",
            "type": "unstyled",
            "text": "",
            "characterList": Immutable.List [],
            "depth": 0,
            "data": Immutable.Map {},
          },
        },
        "selectionBefore": Immutable.Record {
          "anchorKey": "someRandomKey",
          "anchorOffset": 0,
          "focusKey": "someRandomKey",
          "focusOffset": 0,
          "isBackward": false,
          "hasFocus": false,
        },
        "selectionAfter": Immutable.Record {
          "anchorKey": "someRandomKey",
          "anchorOffset": 0,
          "focusKey": "someRandomKey",
          "focusOffset": 0,
          "isBackward": false,
          "hasFocus": false,
        },
      },
    },
    "currentUser": Immutable.Map {
      "id": 1,
    },
    "forceFocus": false,
    "forceUpdate": false,
    "fromMacro": false,
    "signature": Immutable.Map {},
    "ticket": Immutable.Map {
      "id": 1,
    },
    "ticketId": 1,
    "type": "setResponseText",
  },
]
`;

exports[`actions new message setResponseText() should send an end typing event on ticket when the user is not typing but is in the room 1`] = `
Array [
  Object {
    "appliedMacro": undefined,
    "args": Immutable.Map {
      "contentState": Immutable.Record {
        "entityMap": Object {
          "__add": [Function],
          "__create": [Function],
          "__get": [Function],
          "__getLastCreatedEntityKey": [Function],
          "__mergeData": [Function],
          "__replaceData": [Function],
          "add": [Function],
          "create": [Function],
          "get": [Function],
          "getLastCreatedEntityKey": [Function],
          "mergeData": [Function],
          "replaceData": [Function],
        },
        "blockMap": Immutable.OrderedMap {
          "someRandomKey": Immutable.Record {
            "key": "someRandomKey",
            "type": "unstyled",
            "text": "",
            "characterList": Immutable.List [],
            "depth": 0,
            "data": Immutable.Map {},
          },
        },
        "selectionBefore": Immutable.Record {
          "anchorKey": "someRandomKey",
          "anchorOffset": 0,
          "focusKey": "someRandomKey",
          "focusOffset": 0,
          "isBackward": false,
          "hasFocus": false,
        },
        "selectionAfter": Immutable.Record {
          "anchorKey": "someRandomKey",
          "anchorOffset": 0,
          "focusKey": "someRandomKey",
          "focusOffset": 0,
          "isBackward": false,
          "hasFocus": false,
        },
      },
    },
    "currentUser": Immutable.Map {
      "id": 1,
    },
    "forceFocus": false,
    "forceUpdate": false,
    "fromMacro": false,
    "signature": Immutable.Map {},
    "ticket": Immutable.Map {
      "id": 1,
    },
    "ticketId": 1,
    "type": "setResponseText",
  },
]
`;

exports[`actions new message setResponseText() should send typing event when the user is typing 1`] = `
Array [
  Object {
    "appliedMacro": undefined,
    "args": Immutable.Map {
      "contentState": Immutable.Record {
        "entityMap": Object {
          "__add": [Function],
          "__create": [Function],
          "__get": [Function],
          "__getLastCreatedEntityKey": [Function],
          "__mergeData": [Function],
          "__replaceData": [Function],
          "add": [Function],
          "create": [Function],
          "get": [Function],
          "getLastCreatedEntityKey": [Function],
          "mergeData": [Function],
          "replaceData": [Function],
        },
        "blockMap": Immutable.OrderedMap {
          "someRandomKey": Immutable.Record {
            "key": "someRandomKey",
            "type": "unstyled",
            "text": "foo",
            "characterList": Immutable.List [
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
            ],
            "depth": 0,
            "data": Immutable.Map {},
          },
        },
        "selectionBefore": Immutable.Record {
          "anchorKey": "someRandomKey",
          "anchorOffset": 0,
          "focusKey": "someRandomKey",
          "focusOffset": 0,
          "isBackward": false,
          "hasFocus": false,
        },
        "selectionAfter": Immutable.Record {
          "anchorKey": "someRandomKey",
          "anchorOffset": 0,
          "focusKey": "someRandomKey",
          "focusOffset": 0,
          "isBackward": false,
          "hasFocus": false,
        },
      },
    },
    "currentUser": undefined,
    "forceFocus": false,
    "forceUpdate": false,
    "fromMacro": false,
    "signature": Immutable.Map {},
    "ticket": Immutable.Map {
      "id": 1,
    },
    "ticketId": 1,
    "type": "setResponseText",
  },
]
`;

exports[`actions new message setSender action with address 1`] = `
Array [
  Object {
    "sender": Immutable.Map {
      "name": "Acme Support",
      "address": "support@acme.gorgias.io",
    },
    "type": "NEW_MESSAGE_SET_SENDER",
  },
]
`;

exports[`actions new message setSubject() default value 1`] = `
Array [
  Object {
    "subject": "",
    "type": "NEW_MESSAGE_SET_SUBJECT",
  },
]
`;

exports[`actions new message setSubject() given value 1`] = `
Array [
  Object {
    "subject": "hello world",
    "type": "NEW_MESSAGE_SET_SUBJECT",
  },
]
`;

exports[`actions updatePotentialCustomers should resolve when cancelled 1`] = `undefined`;

exports[`actions updatePotentialCustomers should return a list of potential customer on success 1`] = `
Array [
  Object {
    "address": "marie@gorgias.io",
    "customer": Object {
      "id": 4,
      "name": "Marie Curie",
    },
    "id": 4,
    "name": "Marie Curie",
    "type": "email",
    "user": Object {
      "id": 4,
      "name": "Marie Curie",
    },
  },
]
`;
